# api/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Epaggelmaties API
-  description: API for searching professionals
+  title: Beasy API
+  description: API for professionals
   version: 1.0.0
 servers:
 - url: /
@@ -53,6 +53,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Professionals'
+      x-swagger-router-controller: Default
+    put:
+      summary: Update professional's details
+      operationId: professionalsprofessionalIdPUT
+      parameters:
+      - name: professionalId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserUpdate'
+        required: true
+      responses:
+        "200":
+          description: Professional successfully updated
       x-swagger-router-controller: Default
     delete:
       summary: Delete a professional
@@ -176,7 +197,7 @@ paths:
                   $ref: '#/components/schemas/Appointments'
                 x-content-type: application/json
       x-swagger-router-controller: Default
-  /appointments/{appointmentId}/appointment:
+  /appointments/{appointmentId}/newAppointment:
     post:
       summary: Arrange an appointment
       operationId: appointmentsAppointmentIdAppointmentPOST
@@ -200,29 +221,28 @@ paths:
         "400":
           description: "Appointment, not available or user invalid"
       x-swagger-router-controller: Default
-  /appointment/{appointmentId}/return:
-    post:
-      summary: Return a appointment
-      operationId: appointmentAppointmentIdReturnPOST
+  /professionals/{professionalId}/appointments:
+    get:
+      summary: Get a list of appointments by a user
+      operationId: professiomalsProfessionalIdAppointmentsGET
       parameters:
-      - name: appointmentId
+      - name: professionalId
         in: path
         required: true
         style: simple
         explode: false
         schema:
           type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ReturnRequest'
-        required: true
       responses:
         "200":
-          description: Appointment successfully returned
-        "400":
-          description: "Bad request, return not possible"
+          description: A list of appointments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Appointments'
+                x-content-type: application/json
       x-swagger-router-controller: Default
 components:
   schemas:
@@ -273,6 +293,13 @@ components:
           type: string
         email:
           type: string
+    ProfessionalUpdate:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
     Appointments:
       type: object
       properties:
@@ -286,7 +313,7 @@ components:
       example:
         professionalId: 6
         userId: 0
-        appointmentDate: 2000-01-23T04:56:07.000+00:00
+        appointmentDate: 2000-01-23T04:56:07.000Z
     AppointmentRequest:
       type: object
       properties:
