# service/DefaultService.js
@@ -2,20 +2,6 @@
 
 
 /**
- * Return a appointment
- *
- * body ReturnRequest 
- * appointmentId Integer 
- * no response value expected for this operation
- **/
-exports.appointmentAppointmentIdReturnPOST = function(body,appointmentId) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
  * Arrange an appointment
  *
  * body AppointmentRequest 
@@ -25,6 +11,33 @@ exports.appointmentAppointmentIdReturnPOST = function(body,appointmentId) {
 exports.appointmentsAppointmentIdAppointmentPOST = function(body,appointmentId) {
   return new Promise(function(resolve, reject) {
     resolve();
+  });
+}
+
+
+/**
+ * Get a list of appointments by a user
+ *
+ * professionalId Integer 
+ * returns List
+ **/
+exports.professiomalsProfessionalIdAppointmentsGET = function(professionalId) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = [ {
+  "professionalId" : 6,
+  "userId" : 0,
+  "appointmentDate" : "2000-01-23T04:56:07.000Z"
+}, {
+  "professionalId" : 6,
+  "userId" : 0,
+  "appointmentDate" : "2000-01-23T04:56:07.000Z"
+} ];
+    if (Object.keys(examples).length > 0) {
+      resolve(examples[Object.keys(examples)[0]]);
+    } else {
+      resolve();
+    }
   });
 }
 
@@ -120,6 +133,20 @@ exports.professionalsProfessionalIDGET = function(professionalID) {
 
 
 /**
+ * Update professional's details
+ *
+ * body UserUpdate 
+ * professionalId Integer 
+ * no response value expected for this operation
+ **/
+exports.professionalsprofessionalIdPUT = function(body,professionalId) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
+
+/**
  * Get a list of users
  *
  * returns List
@@ -170,11 +197,11 @@ exports.usersUserIdAppointmentsGET = function(userId) {
     examples['application/json'] = [ {
   "professionalId" : 6,
   "userId" : 0,
-  "appointmentDate" : "2000-01-23T04:56:07.000+00:00"
+  "appointmentDate" : "2000-01-23T04:56:07.000Z"
 }, {
   "professionalId" : 6,
   "userId" : 0,
-  "appointmentDate" : "2000-01-23T04:56:07.000+00:00"
+  "appointmentDate" : "2000-01-23T04:56:07.000Z"
 } ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
